--- a/AspMVCECommerce/Web.config
+++ b/AspMVCECommerce/Web.config
@@ -5,14 +5,27 @@
   -->
 <configuration>
   <configSections>
-    
+   
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+  </configSections>
+  
   <connectionStrings>
-
     <add name="DefaultConnection" connectionString="Server=DESKTOP-MM2T8VN\SQLEXPRESS;Database=AspMVCECommerceDB;User Id=sa;Password=root;Pooling=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-
   </connectionStrings>
+
+  <paypal>
+    <settings>
+      <add name="mode" value="sandbox" />
+      <add name="connectionTimeout" value="360000" />
+      <add name="requestRetries" value="5" />
+      <add name="clientId" value="AXzl2DW91ZOcpmPxTQjTbFt5Ll0rFYyRqyYYnOPn6G-IlzwQm6GuAR4po3a7q18FyNSha4NQklNXesWr" />
+      <add name="clientSecret" value="ELBHi-4H0XuPpb6AWpnVKAEZpKMBzCWmO3DCMvVstl7UjeYkvnXuKz-lMXiavs1-4sj9_pvZ3Xr1zq2p" />
+    </settings>
+  </paypal>
+  
+  
   <appSettings>
 
     <add key="webpages:Version" value="3.0.0.0" />
