--- a/AspMVCECommerce/packages.config
+++ b/AspMVCECommerce/packages.config
@@ -35,6 +35,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
+  <package id="PayPal" version="1.9.1" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.8" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
