--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -215,9 +215,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202204091804143_InitialMigration.cs" />
-    <Compile Include="Migrations\202204091804143_InitialMigration.Designer.cs">
-      <DependentUpon>202204091804143_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\202204191132166_initia.cs" />
+    <Compile Include="Migrations\202204191132166_initia.Designer.cs">
+      <DependentUpon>202204191132166_initia.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -230,6 +230,7 @@
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\LineItem.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Models\PaypalConfiguration.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Review.cs" />
@@ -239,6 +240,10 @@
     <Compile Include="Models\Size.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utility\CheckOutUtility.cs" />
+    <Compile Include="Utility\CustomAddressUtility.cs" />
+    <Compile Include="Utility\OrderUtility.cs" />
+    <Compile Include="Utility\ShippingAddress2Utility.cs" />
     <Compile Include="Utility\ShoppingCartUtility.cs" />
     <Compile Include="ViewModel\BrandViewModel.cs" />
     <Compile Include="ViewModel\CategoryViewModel.cs" />
@@ -374,6 +379,7 @@
     <Content Include="Views\Home\CheckOut.cshtml" />
     <Content Include="Views\Home\SuccessView.cshtml" />
     <Content Include="Views\Home\FailureView.cshtml" />
+    <Content Include="Views\Home\Order.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -393,8 +399,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202204091804143_InitialMigration.resx">
-      <DependentUpon>202204091804143_InitialMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202204191132166_initia.resx">
+      <DependentUpon>202204191132166_initia.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
