--- a/AspMVCECommerce/Web.config
+++ b/AspMVCECommerce/Web.config
@@ -12,7 +12,9 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=DESKTOP-MM2T8VN\SQLEXPRESS;Database=AspMVCECommerceDB;User Id=sa;Password=root;Pooling=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" 
+         connectionString="Server=DESKTOP-MM2T8VN\SQLEXPRESS;Database=AspMVCECommerceDB;User Id=sa;Password=root;Pooling=false;MultipleActiveResultSets=true;Trusted_Connection=False;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <paypal>
@@ -40,9 +42,11 @@
   </system.web>
 
   <system.webServer>
-
     <modules>
       <remove name="FormsAuthentication" />
+      
+      <remove name="RoleManager" />
+      
     </modules>
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
