--- a/AspMVCECommerce/Web.config
+++ b/AspMVCECommerce/Web.config
@@ -12,11 +12,18 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DefaultConnection" 
-         connectionString="Server=DESKTOP-55HM4PO;Database=AspMVCECommerceDB;User Id=sa;Password=root;Pooling=false;MultipleActiveResultSets=true;Trusted_Connection=False;"
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=DESKTOP-55HM4PO;Database=AspMVCECommerceDB;User Id=sa;Password=root;Pooling=false;MultipleActiveResultSets=true;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
+  
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="no-reply@yourdomain.com">
+        <network host="smtp.gmail.com" userName="zaldys.ecommerce.demo@gmail.com" password="admin$123456" port="587" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+  
+  
   <paypal>
     <settings>
       <add name="mode" value="sandbox" />
@@ -37,7 +44,11 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
+    
     <compilation debug="true" targetFramework="4.5" />
+    
+
+    
     <httpRuntime targetFramework="4.5" />
   </system.web>
 
