--- a/AspMVCECommerce/packages.config
+++ b/AspMVCECommerce/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.11.42" targetFramework="net45" />
   <package id="jQuery" version="3.4.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net45" />
