--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\ProductsWAController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
+    <Compile Include="Controllers\WishListController.cs" />
     <Compile Include="DTO\ColorDTO.cs" />
     <Compile Include="DTO\HelperDTO.cs" />
     <Compile Include="DTO\LineItemDTO.cs" />
@@ -223,6 +224,7 @@
     <Compile Include="DTO\ProductDTO.cs" />
     <Compile Include="DTO\ReviewDTO.cs" />
     <Compile Include="DTO\SizeDTO.cs" />
+    <Compile Include="DTO\WishListDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -241,6 +243,10 @@
     <Compile Include="Migrations\202205120746444_addnewsletter.cs" />
     <Compile Include="Migrations\202205120746444_addnewsletter.Designer.cs">
       <DependentUpon>202205120746444_addnewsletter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205220814519_addwishlist.cs" />
+    <Compile Include="Migrations\202205220814519_addwishlist.Designer.cs">
+      <DependentUpon>202205220814519_addwishlist.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -262,6 +268,7 @@
     <Compile Include="Models\ShippingAddress2.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
     <Compile Include="Models\Size.cs" />
+    <Compile Include="Models\WishList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\CheckOutUtility.cs" />
@@ -447,6 +454,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205120746444_addnewsletter.resx">
       <DependentUpon>202205120746444_addnewsletter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205220814519_addwishlist.resx">
+      <DependentUpon>202205220814519_addwishlist.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
