complete Add to wishlist,remove to Wishlist,Add wishlist page, Add wishlist count to navigation bar and fix add to cart list product name max length on menu bar

--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -424,6 +424,7 @@
     <Content Include="Views\Home\Unsubscribe.cshtml" />
     <Content Include="Views\Home\PrivacyPolicy.cshtml" />
     <Content Include="Views\Home\TermsAndCondition.cshtml" />
+    <Content Include="Views\Home\WishList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
