--- a/AspMVCECommerce/Web.config
+++ b/AspMVCECommerce/Web.config
@@ -15,6 +15,8 @@
     <add name="DefaultConnection" connectionString="Server=DESKTOP-55HM4PO;Database=AspMVCECommerceDB;User Id=sa;Password=root;Pooling=false;MultipleActiveResultSets=true;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
+  
+  <!-- Newsletter Email Settings-->
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network" from="no-reply@yourdomain.com">
@@ -22,8 +24,10 @@
       </smtp>
     </mailSettings>
   </system.net>
-  
-  
+  <!-- End of Newsletter Email Settings-->
+
+
+  <!-- Paypal API Settings-->
   <paypal>
     <settings>
       <add name="mode" value="sandbox" />
@@ -33,7 +37,7 @@
       <add name="clientSecret" value="ELBHi-4H0XuPpb6AWpnVKAEZpKMBzCWmO3DCMvVstl7UjeYkvnXuKz-lMXiavs1-4sj9_pvZ3Xr1zq2p" />
     </settings>
   </paypal>
-  
+  <!-- End of Paypal API Settings-->
   
   <appSettings>
 
@@ -43,7 +47,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="BaseUrl" value="https://localhost:44372/"/>
-    
+
+    <!-- Confirmation Email Settings-->
+    <add key="Host" value="smtp.gmail.com" />
+    <add key="Port" value="587" />
+    <add key="MailFrom" value="zaldys.ecommerce.demo@gmail.com" />
+    <add key="Password" value="admin$123456" />
+    <!-- End of Confirmation Email Settings-->
   </appSettings>
   
   <system.web>
