Add home page hot deals weekly count down timer

--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\CheckOutUtility.cs" />
     <Compile Include="Utility\CustomAddressUtility.cs" />
+    <Compile Include="Utility\DateUtility.cs" />
     <Compile Include="Utility\EmailUtility.cs" />
     <Compile Include="Utility\LogUtility.cs" />
     <Compile Include="Utility\OrderUtility.cs" />
