add clear hangfire database

--- a/AspMVCECommerce/Web.config
+++ b/AspMVCECommerce/Web.config
@@ -46,7 +46,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="BaseUrl" value="https://localhost:44372/"/>
+    <add key="BaseUrl" value="https://localhost:44372/" />
 
     <!-- Confirmation Email Settings-->
     <add key="Host" value="smtp.gmail.com" />
@@ -54,6 +54,10 @@
     <add key="MailFrom" value="zaldys.ecommerce.demo@gmail.com" />
     <add key="Password" value="admin$123456" />
     <!-- End of Confirmation Email Settings-->
+    
+    
+    <!-- Hangfire Settings-->
+    <add key="owin:AutomaticAppStartup" value="true" />
   </appSettings>
   
   <system.web>
@@ -81,6 +85,7 @@
     </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
