--- a/AspMVCECommerce/packages.config
+++ b/AspMVCECommerce/packages.config
@@ -3,9 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Hangfire" version="1.7.28" targetFramework="net45" />
-  <package id="Hangfire.Core" version="1.7.28" targetFramework="net45" />
-  <package id="Hangfire.SqlServer" version="1.7.28" targetFramework="net45" />
+  <package id="Hangfire.AspNet" version="0.2.0" targetFramework="net45" />
+  <package id="Hangfire.Core" version="1.7.29" targetFramework="net45" />
+  <package id="Hangfire.SqlServer" version="1.7.29" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.11.42" targetFramework="net45" />
   <package id="jQuery" version="3.4.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
