create guide on how to make paypal account, create guide on how to create test credit card for paypal

--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -350,6 +350,16 @@
     <Content Include="FrontEnd\js\slick.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\1 - home page.png" />
+    <Content Include="images\10 - link fake credit card.png" />
+    <Content Include="images\2 - account selection page .png" />
+    <Content Include="images\3 - account selection page .png" />
+    <Content Include="images\4 - country selection page.png" />
+    <Content Include="images\5 - mobile confirmation page.png" />
+    <Content Include="images\6 - complete phone confirmation.png" />
+    <Content Include="images\7 - set up profile page.png" />
+    <Content Include="images\8 - address page.png" />
+    <Content Include="images\9 - generate fake credit card.png" />
     <Content Include="images\ajax-loader.gif" />
     <Content Include="images\ajax-loader2.gif" />
     <Content Include="images\check.png" />
@@ -447,6 +457,9 @@
     <Content Include="Views\Shared\_CameraCompare.cshtml" />
     <Content Include="Views\Shared\_TabletCompare.cshtml" />
     <Content Include="Views\Home\ConfirmEmail.cshtml" />
+    <Content Include="Views\Home\PaypalAccountGuide.cshtml" />
+    <Content Include="Views\Home\PaypalCreditCardGuide.cshtml" />
+    <Content Include="Views\Home\Help.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
